--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,17 +2,18 @@ name: Publish Package
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   release:
     name: Publish
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
         node-version: 14
-    - run: 
-        npm ci
-        npm publish --access public
+        registry-url: https://npm.pkg.github.com
+    - run: npm i
+    - run: npm publish --access public
       env:
-        NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+        NODE_AUTH_TOKEN: ${{secrets.GH_AUTH_TOKEN}}
